--- a/css/skills.css
+++ b/css/skills.css
@@ -2,7 +2,6 @@
   display: grid;
   grid-template-columns: 2fr 1fr;
   padding: 6.4rem;
-  height: 80vh;
 }
 
 .skills {
@@ -29,6 +28,7 @@
   margin: 3rem 1rem;
   display: flex;
   gap: 2rem;
+  /* flex-wrap: wrap; */
 }
 
 .skills {
@@ -89,4 +89,36 @@
 
 .image {
   width: 100%;
+}
+
+@media (max-width: 400px) {
+  .container-skills {
+    grid-template-columns: 1fr;
+    padding: 2.1rem;
+  }
+
+  .container-img {
+    display: none;
+  }
+
+  .heading {
+    font-size: 3rem;
+    padding-bottom: 1rem;
+    border-bottom: 2px solid #eee;
+  }
+
+  .language {
+    border-radius: 50%;
+    width: 7rem;
+    height: 7rem;
+    padding: 1rem;
+    transition: all 0.5s;
+  }
+
+  .languages,
+  .tools {
+    flex-wrap: wrap;
+    margin: 1rem 0.3rem;
+    gap: 0.6rem;
+  }
 }
